# Gillsystems-update-ai-engine-software

./: .gitignore  CHANGELOG.md  README.md  UserGuide.md  bootstrap.ps1  gillsystems-update-ai-software-rocm-agent-skill-idea.md  pyproject.toml  requirements.txt  update-ai-stack.bat  update-ai-stack.sh
conductor/: index.md  product-guidelines.md  product.md  setup_state.json  tech-stack.md  tracks.md  workflow.md
conductor/tracks/T-001-agent-core/: plan.md  spec.md
config/: default_config.yaml
documentation/: implementation_plan.md  repo-analysis-amd-models.md
src/: __init__.py  cli.py  config.py  gpu_detect.py  main.py  privilege.py  state_manager.py  version_intel.py
src/linux/: __init__.py  llama_builder.py  reboot_handler.py  rocm_updater.py
src/windows/: __init__.py  hip_updater.py  llama_builder.py  reboot_handler.py
tests/: __init__.py  test_linux_rocm.py  test_state_manager.py  test_version_intel.py  test_windows_hip.py  test_windows_llama_builder.py
tests/mocks/: mock_installers.py
