[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "gillsystems-ai-stack-updater"
version = "1.0.0"
description = "Autonomous AMD ROCm/HIP + llama.cpp update agent for consumer GPU machines"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Gillsystems", email = "contact@gillsystems.ca" },
]
keywords = ["rocm", "hip", "llama.cpp", "amd", "gpu", "updater", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "packaging>=24.0",
    "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "responses>=0.25",
    "coverage>=7.5",
]

[project.scripts]
gasu = "src.main:main"

[project.urls]
Homepage = "https://github.com/OCNGill/Gillsystems-update-ai-engine-software"
Repository = "https://github.com/OCNGill/Gillsystems-update-ai-engine-software"
Issues = "https://github.com/OCNGill/Gillsystems-update-ai-engine-software/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
